element.

The community group page now has a delete option.

Fix to fetchDependents for the very special case of twins.

Added preferredforename to student and email to guardian searches in InfoBook.

Filter by category for reporting on comments.

Added a new admin group 's' for special access to restricted Background entries.


Version ClaSS-1.0.4 release (2011/09/19)
-------------------------------------------

Fix to email headers sent through Pear mail, needed the date to be explicity set.

Allowed statement profiles (compound mark types) to be carried forward
to first stage of next course.

Removed the explanation line for SMS and Emails to parents as its not generally helpful.

Fix to listing_community_users when community is blank.

Export student data from InfoBook now checks for value_db in
preference to value from the Student array.

Now pass the active eveid to the absences and print register scripts
(before always use get_currentevent for the whole school and so was not
sensitive to sections).

Now record cid as part of the attendance table of lesson-by-lesson
register.

Fixed typo in count_attendance.

A fix to listin_community when $yid='%' for the com.

Improved performance of fetchCohortAssessmentDefs.

Re-worked the list_pastoralgroups used by Report to use comid instead
of fid and so make use of Houses as pastoral groups.

Changed the residence perms to link to accomodation groups (only
partly done).

Fix to import students when student id is not already in db.

Added date navigation to student_transport page.



Version ClaSS-1.0.3 release (2011/09/12)
-------------------------------------------

Fix to student_enrolment action page.

Made fetch_transport lib part of the general functions set.

Improved class_matrix so it will only clear out classes which are no
longer needed, teacher assignments are preserved for unchanged classes.

Fix to list_member_communities to preserve membership info.
